# Backend

./: .env.local  .gitignore  Cargo.toml  README.MD
contracts/test/: lib.rs
contracts/trustbridge_contract/: Cargo.toml  trustbridge_escrow.rs
src/: config.rs  main.rs  validation.rs
src/middleware/: auth.rs
src/models/: auth.rs  mod.rs
src/routes/: auth.rs  borrower.rs  escrow.rs  lender.rs  mod.rs
src/services/: escrow.rs
src/tests/: auth_tests.rs  mod.rs
src/utils/: auth.rs
trustbridge_contract/: Cargo.toml  lib.rs  trustbridge_escrow.rs
